--- a/test/file/test2.css
+++ b/test/file/test2.css
@@ -8,4 +8,9 @@
     content:'file: /home/fanrong/funlog/test/file/test2.css, line: 8';
     content:'file: /home/fanrong/funlog/test/file/test2.css, line: 9';
     content:'file: /home/fanrong/funlog/test/file/test2.css, line: 10';
+    content:'file: /home/fanrong/funlog/test/file/test2.css, line: 11';
+    content:'file: /home/fanrong/funlog/test/file/test2.css, line: 12';
+     content:'file: /home/fanrong/funlog/test/file/test2.css, line: 13';
+     content:'file: /home/fanrong/funlog/test/file/test2.css, line: 14';
+     content:'file: /home/fanrong/funlog/test/file/test2.css, line: 15';
 }
